--- a/Index.html
+++ b/Index.html
@@ -29,15 +29,14 @@
     </style>
 </head>
 <body>
-
-    <div id="buscador-direcciones">
-        <label for="direccion">Buscar Dirección:</label><br>
+    <div id="barra-busqueda">
         <input 
             type="text" 
             id="direccion" 
-            placeholder="Dirección Numero, Providencia, Santiago" 
-            style="width: calc(100% - 20px); padding: 8px; margin-bottom: 10px;"
+            placeholder="Calle Número, Providencia, Santiago" 
+            style="width: calc(100% - 20px); padding: 10px; margin: 10px 0;"
         />
+        <button onclick="buscarDireccion()" style="padding: 10px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer;">Buscar</button>
     </div>
 
 <div id="selector">
@@ -91,7 +90,6 @@ async function cargarDatosCSV() {
 let tematicas = {};
 let layerControl = L.control.layers().addTo(map);
 let coberturaLayers = {};
-let marcadorDireccion = null; // Para el pin de la dirección buscada
 
 // Obtener datos y organizar las temáticas
 async function obtenerTematicas() {
@@ -201,39 +199,6 @@ async function cargarCoberturas() {
         });
     });
 }
-
-//Función para buscar direcciones
-async function buscarDireccion() {
-    const direccionInput = document.getElementById('direccion').value;
-
-    if (!direccionInput) return;
-
-    // Consulta a la API de Nominatim
-    const response = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(direccionInput)}`);
-    const resultados = await response.json();
-
-    if (resultados.length > 0) {
-        const lugar = resultados[0];
-        const latLng = [lugar.lat, lugar.lon];
-
-        // Eliminar el marcador previo si existe
-        if (marcadorDireccion) {
-            map.removeLayer(marcadorDireccion);
-        }
-
-        // Crear un nuevo marcador con popup
-        marcadorDireccion = L.marker(latLng)
-            .bindPopup(`<b>Dirección:</b> ${lugar.display_name}`)
-            .addTo(map)
-            .openPopup();
-
-        // Centrar el mapa en la ubicación
-        map.setView(latLng, 15);
-    } else {
-        alert("No se encontraron resultados para la dirección ingresada.");
-    }
-}
-document.getElementById('direccion').addEventListener('input', buscarDireccion);
 
 // Función para mostrar los botones de descarga
 function mostrarBotonesDescarga() {
@@ -367,6 +332,45 @@ function descargarExcel() {
             XLSX.writeFile(wb, `${selectedCobertura}.xlsx`);
         }
     });
+}
+
+// Variable para almacenar el marcador de búsqueda actual
+let marcadorBusqueda = null;
+
+// Función para buscar dirección y agregar marcador
+async function buscarDireccion() {
+    const direccion = document.getElementById('direccion').value;
+    if (!direccion) return;
+
+    const url = `https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(direccion)}&format=json&limit=1`;
+
+    try {
+        const response = await fetch(url);
+        const data = await response.json();
+
+        if (data.length > 0) {
+            const { lat, lon, display_name } = data[0];
+
+            // Si existe un marcador previo, eliminarlo
+            if (marcadorBusqueda) {
+                map.removeLayer(marcadorBusqueda);
+            }
+
+            // Agregar nuevo marcador
+            marcadorBusqueda = L.marker([lat, lon])
+                .addTo(map)
+                .bindPopup(`<b>Dirección:</b><br>${display_name}`)
+                .openPopup();
+
+            // Centrar el mapa en la nueva ubicación
+            map.setView([lat, lon], 16);
+        } else {
+            alert('No se encontró la dirección ingresada.');
+        }
+    } catch (error) {
+        console.error('Error al buscar la dirección:', error);
+        alert('Ocurrió un error al buscar la dirección. Inténtalo nuevamente.');
+    }
 }
 
 // Cargar el visor al inicio
