--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,7 @@
             id="direccion" 
             placeholder="Calle Número, Providencia, Santiago" 
             style="width: calc(100% - 20px); padding: 10px; margin: 10px 0;"
+            width= 12%
         />
         <button onclick="buscarDireccion()" style="padding: 10px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer;">Buscar</button>
     </div>
