--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,9 @@
     </style>
 </head>
 <body>
-   <div id="barra-busqueda" style="width: 12%; margin: 10px 0;">
+    
+  <div id="barra-busqueda" style="width: 12%; margin: 10px 0;">
+    <label for="direccion" style="display: block; margin-bottom: 5px; font-weight: bold;">Buscar por dirección:</label>
     <input 
         type="text" 
         id="direccion" 
@@ -41,7 +43,6 @@
         Buscar
     </button>
 </div>
-
 
 <div id="selector">
     <label for="tematica">Selecciona una Temática:</label> <br>
