--- a/Index.html
+++ b/Index.html
@@ -54,7 +54,7 @@
 <div id="map"></div>
 
 <div id="cobertura-selector">
-    <label for="cobertura">Selecciona una Cobertura:</label> <br>
+    <label for="cobertura">Descarga de información:</label> <br>
     <select id="cobertura" onchange="mostrarBotonesDescarga()">
         <!-- Las coberturas se cargarán dinámicamente según la temática -->
     </select>
