--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div id="selector">
-    <label for="tematica">Selecciona una Temática:</label> <br>
+    <label for="tematica">Selecciona temática:</label> <br>
     <select id="tematica" onchange="cargarCoberturas()">
         <!-- Las temáticas se cargarán dinámicamente -->
     </select>
